syntax = "proto3";

package mpc.v1;

option go_package = "github.com/kashguard/go-mpc-wallet/internal/pb/mpc/v1";

// MPC核心服务定义
service MPCNode {
  // 提交协议消息
  rpc SubmitProtocolMessage(SubmitProtocolMessageRequest) returns (SubmitProtocolMessageResponse);

  // 启动 DKG（由协调者调用参与者）
  rpc StartDKG(StartDKGRequest) returns (StartDKGResponse);

  // 启动签名（由协调者调用参与者）
  rpc StartSign(StartSignRequest) returns (StartSignResponse);

  // 启动密钥轮换（Resharing）（由协调者调用参与者）
  rpc StartResharing(StartResharingRequest) returns (StartResharingResponse);

  // 心跳检测
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

service MPCCoordinator {
  // 创建签名会话
  rpc CreateSigningSession(CreateSessionRequest) returns (CreateSessionResponse);

  // 获取会话状态
  rpc GetSessionStatus(SessionStatusRequest) returns (SessionStatusResponse);

  // 聚合签名
  rpc AggregateSignatures(AggregateRequest) returns (AggregateResponse);
}

// 基础消息类型

// 会话相关消息
message CreateSessionRequest {
  string key_id = 1;
  bytes message = 2;
  string protocol = 3;  // "gg18", "gg20", "frost"
  int32 timeout_seconds = 4;
  repeated string participant_nodes = 5;
}

message CreateSessionResponse {
  string session_id = 1;
  string status = 2;
  int32 threshold = 3;
  int32 total_nodes = 4;
  repeated string participating_nodes = 5;
  string created_at = 6;
  string expires_at = 7;
}

message SessionStatusRequest {
  string session_id = 1;
}

message SessionStatusResponse {
  string session_id = 1;
  string status = 2;
  int32 current_round = 3;
  int32 total_rounds = 4;
  repeated string participating_nodes = 5;
  string signature = 6;  // hex encoded
  string created_at = 7;
  string completed_at = 8;
  int32 duration_ms = 9;
}

// 协议消息请求
message SubmitProtocolMessageRequest {
  string session_id = 1;
  string node_id = 2;
  bytes data = 3;
  int32 round = 4;
  string timestamp = 5;
}

// 协议消息响应
message SubmitProtocolMessageResponse {
  bool accepted = 1;
  string message = 2;
  int32 next_round = 3;
}

// 启动 DKG 请求/响应
message StartDKGRequest {
  string session_id = 1; // DKG 会话ID（等于 key_id）
  string key_id = 2;
  string algorithm = 3;   // 例：ECDSA
  string curve = 4;       // 例：secp256k1
  int32 threshold = 5;
  int32 total_nodes = 6;
  repeated string node_ids = 7; // 参与节点列表
}

message StartDKGResponse {
  bool started = 1;
  string message = 2;
}

// 启动签名 请求/响应
message StartSignRequest {
  string session_id = 1; // 签名会话ID
  string key_id = 2;
  bytes message = 3;     // 要签名的消息
  string message_hex = 4; // 消息的hex编码（可选）
  string protocol = 5;   // "gg18", "gg20", "frost"
  int32 threshold = 6;
  int32 total_nodes = 7;
  repeated string node_ids = 8; // 参与节点列表
  string derivation_path = 9;   // 派生路径 (e.g. "m/44'/60'/0'/0/0")
  bytes parent_chain_code = 10; // 根 ChainCode，用于派生
}

message StartSignResponse {
  bool started = 1;
  string message = 2;
}

// 启动密钥轮换 请求/响应
message StartResharingRequest {
  string session_id = 1;      // 会话ID (通常等于 key_id)
  string key_id = 2;          // 目标密钥ID
  repeated string old_node_ids = 3; // 旧参与节点列表
  repeated string new_node_ids = 4; // 新参与节点列表
  int32 old_threshold = 5;
  int32 new_threshold = 6;
}

message StartResharingResponse {
  bool started = 1;
  string message = 2;
}

// 签名聚合相关消息
message AggregateRequest {
  string session_id = 1;
}

message AggregateResponse {
  bool success = 1;
  string signature = 2;  // hex encoded
  string public_key = 3; // hex encoded
  string message_hash = 4;
  string aggregated_at = 5;
}

// 心跳消息
message HeartbeatRequest {
  string node_id = 1;
  string sent_at = 2;
  map<string, string> status_info = 3;
}

message HeartbeatResponse {
  bool alive = 1;
  string coordinator_id = 2;
  string received_at = 3;
  map<string, string> instructions = 4;
}
