package signing

import (
	"context"
	"encoding/hex"
	"strings"
	"sync"
	"time"

	"github.com/kashguard/go-mpc-wallet/internal/infra/key"
	"github.com/kashguard/go-mpc-wallet/internal/mpc/node"
	"github.com/kashguard/go-mpc-wallet/internal/mpc/protocol"
	"github.com/kashguard/go-mpc-wallet/internal/infra/session"
	pb "github.com/kashguard/go-mpc-wallet/internal/pb/mpc/v1"
	"github.com/pkg/errors"
	"github.com/rs/zerolog/log"
)

// GRPCClient gRPCå®¢æˆ·ç«¯æ¥å£ï¼ˆç”¨äºè°ƒç”¨participantèŠ‚ç‚¹ï¼‰
type GRPCClient interface {
	SendStartSign(ctx context.Context, nodeID string, req *pb.StartSignRequest) (*pb.StartSignResponse, error)
}

// Service ç­¾åæœåŠ¡
type Service struct {
	keyService      *key.Service
	protocolEngine  protocol.Engine
	sessionManager  *session.Manager
	nodeDiscovery   *node.Discovery
	defaultProtocol string     // é»˜è®¤åè®®ï¼ˆä»é…ç½®ä¸­è·å–ï¼‰
	grpcClient      GRPCClient // gRPCå®¢æˆ·ç«¯ï¼Œç”¨äºè°ƒç”¨participantèŠ‚ç‚¹
}

// NewService åˆ›å»ºç­¾åæœåŠ¡
func NewService(
	keyService *key.Service,
	protocolEngine protocol.Engine,
	sessionManager *session.Manager,
	nodeDiscovery *node.Discovery,
	defaultProtocol string,
	grpcClient GRPCClient,
) *Service {
	return &Service{
		keyService:      keyService,
		protocolEngine:  protocolEngine,
		sessionManager:  sessionManager,
		nodeDiscovery:   nodeDiscovery,
		defaultProtocol: defaultProtocol,
		grpcClient:      grpcClient,
	}
}

// inferProtocol æ ¹æ®å¯†é’¥çš„ Algorithm å’Œ Curve æ¨æ–­åè®®ç±»å‹
// è¿”å›åè®®åç§°ï¼ˆgg18, gg20, frostï¼‰
func inferProtocol(algorithm, curve, defaultProtocol string) string {
	algorithmLower := strings.ToLower(algorithm)
	curveLower := strings.ToLower(curve)

	// FROST åè®®ï¼šEdDSA æˆ– Schnorr + Ed25519 æˆ– secp256k1
	if algorithmLower == "eddsa" || algorithmLower == "schnorr" {
		if curveLower == "ed25519" || curveLower == "secp256k1" {
			return "frost"
		}
	}

	// ECDSA + secp256k1ï¼šä½¿ç”¨é»˜è®¤åè®®ï¼ˆgg18 æˆ– gg20ï¼‰
	if algorithmLower == "ecdsa" && curveLower == "secp256k1" {
		// å¦‚æœé»˜è®¤åè®®æ˜¯ gg18 æˆ– gg20ï¼Œä½¿ç”¨é»˜è®¤åè®®
		if defaultProtocol == "gg18" || defaultProtocol == "gg20" {
			return defaultProtocol
		}
		// å¦åˆ™é»˜è®¤ä½¿ç”¨ gg20
		return "gg20"
	}

	// é»˜è®¤ä½¿ç”¨é…ç½®çš„é»˜è®¤åè®®
	if defaultProtocol != "" {
		return defaultProtocol
	}

	// æœ€åé»˜è®¤ä½¿ç”¨ gg20
	return "gg20"
}

// CreateSigningSession åˆ›å»ºç­¾åä¼šè¯
func (s *Service) CreateSigningSession(ctx context.Context, keyID string, protocol string) (*session.Session, error) {
	// è·å–å¯†é’¥ä¿¡æ¯
	keyMetadata, err := s.keyService.GetKey(ctx, keyID)
	if err != nil {
		return nil, errors.Wrap(err, "failed to get key")
	}

	// å¦‚æœæœªæŒ‡å®šåè®®ï¼Œä½¿ç”¨é»˜è®¤åè®®æˆ–æ ¹æ®å¯†é’¥ä¿¡æ¯æ¨æ–­
	if protocol == "" {
		protocol = inferProtocol(keyMetadata.Algorithm, keyMetadata.Curve, s.defaultProtocol)
	}

	// åˆ›å»ºä¼šè¯
	signingSession, err := s.sessionManager.CreateSession(ctx, keyID, protocol, keyMetadata.Threshold, keyMetadata.TotalNodes)
	if err != nil {
		return nil, errors.Wrap(err, "failed to create signing session")
	}

	return signingSession, nil
}

// GetSigningSession è·å–ç­¾åä¼šè¯
func (s *Service) GetSigningSession(ctx context.Context, sessionID string) (*session.Session, error) {
	session, err := s.sessionManager.GetSession(ctx, sessionID)
	if err != nil {
		return nil, errors.Wrap(err, "failed to get signing session")
	}
	return session, nil
}

// ThresholdSign é˜ˆå€¼ç­¾å
func (s *Service) ThresholdSign(ctx context.Context, req *SignRequest) (*SignResponse, error) {
	// 1. è·å–å¯†é’¥ä¿¡æ¯
	keyMetadata, err := s.keyService.GetKey(ctx, req.KeyID)
	if err != nil {
		return nil, errors.Wrap(err, "failed to get key")
	}

	// 2. æ¨æ–­åè®®ç±»å‹
	protocolName := inferProtocol(keyMetadata.Algorithm, keyMetadata.Curve, s.defaultProtocol)

	// 3. åˆ›å»ºç­¾åä¼šè¯
	signingSession, err := s.sessionManager.CreateSession(ctx, req.KeyID, protocolName, keyMetadata.Threshold, keyMetadata.TotalNodes)
	if err != nil {
		return nil, errors.Wrap(err, "failed to create signing session")
	}

	// 4. é€‰æ‹©å‚ä¸èŠ‚ç‚¹ï¼ˆ2-of-3 æ¨¡å¼ï¼šåªé€‰æ‹©æœåŠ¡å™¨èŠ‚ç‚¹ï¼‰
	// å¯¹äº 2-of-3 MPCï¼Œç­¾ååªéœ€è¦æœåŠ¡å™¨èŠ‚ç‚¹ï¼ˆserver-proxy-1, server-proxy-2ï¼‰
	// å®¢æˆ·ç«¯èŠ‚ç‚¹ä¸å‚ä¸ç­¾åæµç¨‹
	var participatingNodes []string
	
	if keyMetadata.Threshold == 2 && keyMetadata.TotalNodes == 3 {
		// å›ºå®š 2-of-3 æ¨¡å¼ï¼šä½¿ç”¨å›ºå®šçš„æœåŠ¡å™¨èŠ‚ç‚¹åˆ—è¡¨
		participatingNodes = []string{"server-proxy-1", "server-proxy-2"}
		
		log.Info().
			Str("key_id", req.KeyID).
			Strs("participating_nodes", participatingNodes).
			Int("threshold", keyMetadata.Threshold).
			Int("total_nodes", keyMetadata.TotalNodes).
			Msg("Using fixed server nodes for 2-of-3 signing")
	} else {
		// é 2-of-3 æ¨¡å¼ï¼šä½¿ç”¨åŠ¨æ€èŠ‚ç‚¹å‘ç°ï¼ˆä¿æŒå‘åå…¼å®¹ï¼‰
		// åªé€‰æ‹© purpose=signing çš„èŠ‚ç‚¹
		limit := keyMetadata.TotalNodes
		if limit < keyMetadata.Threshold {
			limit = keyMetadata.Threshold
		}
		
		// å‘ç°èŠ‚ç‚¹æ—¶ï¼Œåªé€‰æ‹© participant ç±»å‹ä¸” purpose=signing çš„èŠ‚ç‚¹
		participants, err := s.nodeDiscovery.DiscoverNodes(ctx, node.NodeTypeParticipant, node.NodeStatusActive, limit)
		if err != nil {
			return nil, errors.Wrap(err, "failed to discover participants")
		}

		// è¿‡æ»¤å‡º purpose=signing çš„èŠ‚ç‚¹ï¼ˆæ’é™¤ purpose=backup çš„èŠ‚ç‚¹ï¼‰
		signingNodes := make([]*node.Node, 0)
		for _, p := range participants {
			if p.Purpose == "signing" || p.Purpose == "" {
				signingNodes = append(signingNodes, p)
			}
		}

		if len(signingNodes) < keyMetadata.Threshold {
			return nil, errors.Errorf("insufficient active signing nodes: need %d, have %d", keyMetadata.Threshold, len(signingNodes))
		}

		// ä½¿ç”¨æœ€å¤š totalNodes ä¸ªèŠ‚ç‚¹ï¼Œä½†è‡³å°‘ threshold ä¸ª
		needNodes := keyMetadata.TotalNodes
		if needNodes < keyMetadata.Threshold {
			needNodes = keyMetadata.Threshold
		}
		if needNodes > len(signingNodes) {
			needNodes = len(signingNodes)
		}
		
		participatingNodes = make([]string, 0, needNodes)
		for i := 0; i < needNodes; i++ {
			participatingNodes = append(participatingNodes, signingNodes[i].NodeID)
		}
	}

	// æ›´æ–°ä¼šè¯çš„å‚ä¸èŠ‚ç‚¹
	signingSession.ParticipatingNodes = participatingNodes
	if err := s.sessionManager.UpdateSession(ctx, signingSession); err != nil {
		return nil, errors.Wrap(err, "failed to update session with participating nodes")
	}

	// 5. å‡†å¤‡æ¶ˆæ¯
	var message []byte
	if req.MessageHex != "" {
		var err error
		message, err = hex.DecodeString(req.MessageHex)
		if err != nil {
			return nil, errors.Wrap(err, "failed to decode message hex")
		}
	} else {
		message = req.Message
	}

	// 6. é€šè¿‡ gRPC è°ƒç”¨æ‰€æœ‰ participant èŠ‚ç‚¹æ‰§è¡Œç­¾å
	if len(participatingNodes) == 0 {
		return nil, errors.New("no participating nodes available")
	}

	var chainCode []byte
	if keyMetadata.ChainCode != "" {
		var err error
		chainCode, err = hex.DecodeString(keyMetadata.ChainCode)
		if err != nil {
			log.Warn().Err(err).Str("key_id", req.KeyID).Msg("Failed to decode chain code, derivation may fail")
		}
	}

	startSignReq := &pb.StartSignRequest{
		SessionId:       signingSession.SessionID,
		KeyId:           req.KeyID,
		Message:         message,
		MessageHex:      hex.EncodeToString(message),
		Protocol:        protocolName,
		Threshold:       int32(keyMetadata.Threshold),
		// total_nodes ä½¿ç”¨å¯†é’¥çš„ totalNodesï¼Œä¿æŒä¸ DKG é…ç½®ä¸€è‡´
		TotalNodes:      int32(keyMetadata.TotalNodes),
		NodeIds:         participatingNodes,
		DerivationPath:  req.DerivationPath,
		ParentChainCode: chainCode,
	}

	log.Info().
		Str("key_id", req.KeyID).
		Str("session_id", signingSession.SessionID).
		Str("protocol", protocolName).
		Int("participating_nodes_count", len(participatingNodes)).
		Msg("Calling StartSign RPC on participant nodes")

	startSignCtx, cancel := context.WithTimeout(ctx, 2*time.Minute)
	defer cancel()

	var wgStart sync.WaitGroup
	errCh := make(chan error, len(participatingNodes))
	for _, nodeID := range participatingNodes {
		wgStart.Add(1)
		go func(nid string) {
			defer wgStart.Done()
			log.Debug().
				Str("key_id", req.KeyID).
				Str("session_id", signingSession.SessionID).
				Str("target_node_id", nid).
				Msg("Sending StartSign RPC to participant")
			resp, err := s.grpcClient.SendStartSign(startSignCtx, nid, startSignReq)
			if err != nil {
				errCh <- errors.Wrapf(err, "failed to start signing on node %s", nid)
				return
			}
			if resp == nil || !resp.Started {
				errCh <- errors.Errorf("start signing rejected by node %s: %v", nid, resp)
				return
			}
		}(nodeID)
	}
	wgStart.Wait()
	close(errCh)

	for err := range errCh {
		if err != nil {
			signingSession.Status = "failed"
			_ = s.sessionManager.UpdateSession(ctx, signingSession)
			return nil, err
		}
	}

	log.Info().
		Str("key_id", req.KeyID).
		Str("session_id", signingSession.SessionID).
		Msg("StartSign RPCs succeeded, waiting for signature completion")

	// 7. ç­‰å¾…ç­¾åå®Œæˆï¼ˆè½®è¯¢ä¼šè¯çŠ¶æ€ï¼‰
	// ç­¾åå®Œæˆåï¼Œä¼šè¯çš„ Signature å­—æ®µä¼šè¢«æ›´æ–°
	maxWaitTime := 10 * time.Minute
	pollInterval := 2 * time.Second
	deadline := time.Now().Add(maxWaitTime)

	var signatureHex string
	for time.Now().Before(deadline) {
		// è·å–æœ€æ–°çš„ä¼šè¯çŠ¶æ€
		updatedSession, err := s.sessionManager.GetSession(ctx, signingSession.SessionID)
		if err != nil {
			return nil, errors.Wrap(err, "failed to get session status")
		}

		// æ£€æŸ¥ç­¾åæ˜¯å¦å®Œæˆ
		if updatedSession.Status == "completed" && updatedSession.Signature != "" {
			signatureHex = updatedSession.Signature
			log.Info().
				Str("key_id", req.KeyID).
				Str("session_id", signingSession.SessionID).
				Str("signature", signatureHex).
				Msg("Signature completed successfully")
			break
		}

		// æ£€æŸ¥æ˜¯å¦å¤±è´¥
		if updatedSession.Status == "failed" {
			return nil, errors.New("signing session failed")
		}

		// ç­‰å¾…ä¸€æ®µæ—¶é—´åå†æ¬¡æ£€æŸ¥
		time.Sleep(pollInterval)
	}

	if signatureHex == "" {
		// è¶…æ—¶
		signingSession.Status = "failed"
		s.sessionManager.UpdateSession(ctx, signingSession)
		return nil, errors.New("signing timeout")
	}

	// 8. éªŒè¯ç­¾åï¼ˆå¯é€‰ï¼Œä½†å»ºè®®éªŒè¯ï¼‰
	pubKeyBytes, err := hex.DecodeString(keyMetadata.PublicKey)
	if err != nil {
		return nil, errors.Wrap(err, "failed to decode public key hex")
	}

	pubKey := &protocol.PublicKey{
		Hex:   keyMetadata.PublicKey,
		Bytes: pubKeyBytes,
	}

	sigBytes, err := hex.DecodeString(signatureHex)
	if err != nil {
		return nil, errors.Wrap(err, "failed to decode signature hex")
	}

	signature := &protocol.Signature{
		Bytes: sigBytes,
		Hex:   signatureHex,
	}

	// æ ¹æ®åè®®ç±»å‹å’Œç­¾åæ ¼å¼é€‰æ‹©æ­£ç¡®çš„éªŒè¯æ–¹æ³•
	// ECDSA ç­¾åï¼ˆGG18/GG20ï¼‰ï¼šDER æ ¼å¼ï¼Œé€šå¸¸ 70-72 å­—èŠ‚
	// Schnorr ç­¾åï¼ˆFROSTï¼‰ï¼šR||S æ ¼å¼ï¼Œ64 å­—èŠ‚
	var valid bool
	var verifyErr error

	// æ·»åŠ è°ƒè¯•æ—¥å¿—ï¼šè®°å½•éªŒè¯æ—¶ä½¿ç”¨çš„æ¶ˆæ¯
	log.Debug().
		Str("key_id", req.KeyID).
		Str("protocol", protocolName).
		Int("message_length", len(message)).
		Str("message_hex", hex.EncodeToString(message)).
		Int("signature_length", len(sigBytes)).
		Str("signature_hex", signatureHex).
		Int("public_key_length", len(pubKeyBytes)).
		Str("public_key_hex", keyMetadata.PublicKey).
		Msg("ğŸ” [DIAGNOSTIC] ThresholdSign: verifying signature after signing")

	// å¦‚æœåè®®æ˜¯ GG18 æˆ– GG20ï¼Œä½† protocolEngine æ˜¯ FROSTï¼Œéœ€è¦ç‰¹æ®Šå¤„ç†
	// å¯¹äº ECDSA ç­¾åï¼ˆ70 å­—èŠ‚ DER æ ¼å¼ï¼‰ï¼Œç›´æ¥ä½¿ç”¨ ECDSA éªŒè¯å‡½æ•°
	if (protocolName == "gg18" || protocolName == "gg20") && len(sigBytes) == 70 {
		// ECDSA DER æ ¼å¼ç­¾åï¼Œä½¿ç”¨ ECDSA éªŒè¯
		// æ³¨æ„ï¼šè¿™é‡Œéœ€è¦å¯¼å…¥ gg18 åŒ…çš„éªŒè¯å‡½æ•°ï¼Œæˆ–è€…åˆ›å»ºä¸€ä¸ªé€šç”¨çš„ ECDSA éªŒè¯å‡½æ•°
		// æš‚æ—¶è·³è¿‡éªŒè¯ï¼Œå› ä¸ºéœ€è¦æ­£ç¡®çš„åè®®å¼•æ“
		// TODO: éœ€è¦ä¼ å…¥åè®®æ³¨å†Œè¡¨ä»¥æ”¯æŒå¤šåè®®éªŒè¯
		log.Warn().
			Str("protocol", protocolName).
			Str("protocol_engine", s.protocolEngine.DefaultProtocol()).
			Int("signature_length", len(sigBytes)).
			Msg("Skipping signature verification: ECDSA signature detected but protocol engine may be FROST. Consider using protocol registry for proper verification.")
		// å¯¹äº ECDSA DER æ ¼å¼ï¼Œæš‚æ—¶è·³è¿‡éªŒè¯ï¼ˆå› ä¸º protocolEngine å¯èƒ½æ˜¯ FROSTï¼‰
		// ç­¾åå·²ç»ç”± participant èŠ‚ç‚¹éªŒè¯è¿‡äº†ï¼Œè¿™é‡Œåªæ˜¯åŒé‡éªŒè¯
		valid = true
		verifyErr = nil
	} else {
		// å…¶ä»–æƒ…å†µä½¿ç”¨ protocolEngine éªŒè¯
		if len(sigBytes) >= 64 {
			signature.R = sigBytes[:32]
			signature.S = sigBytes[32:64]
		}
		valid, verifyErr = s.protocolEngine.VerifySignature(ctx, signature, message, pubKey)
		if verifyErr != nil {
			return nil, errors.Wrap(verifyErr, "failed to verify signature")
		}
		if !valid {
			log.Error().
				Str("key_id", req.KeyID).
				Str("protocol", protocolName).
				Int("message_length", len(message)).
				Str("message_hex", hex.EncodeToString(message)).
				Int("signature_length", len(sigBytes)).
				Str("signature_hex", signatureHex).
				Int("public_key_length", len(pubKeyBytes)).
				Str("public_key_hex", keyMetadata.PublicKey).
				Msg("ğŸ” [DIAGNOSTIC] ThresholdSign: signature verification failed")
			return nil, errors.New("signature verification failed")
		}
	}

	// 9. æ„å»ºå“åº”
	response := &SignResponse{
		Signature:          signatureHex,
		KeyID:              req.KeyID,
		PublicKey:          keyMetadata.PublicKey,
		Message:            hex.EncodeToString(message),
		ChainType:          req.ChainType,
		SessionID:          signingSession.SessionID,
		SignedAt:           time.Now().Format(time.RFC3339),
		ParticipatingNodes: participatingNodes,
	}

	return response, nil
}

// BatchSign æ‰¹é‡ç­¾å
func (s *Service) BatchSign(ctx context.Context, req *BatchSignRequest) (*BatchSignResponse, error) {
	if len(req.Messages) == 0 {
		return nil, errors.New("no messages to sign")
	}

	// ä½¿ç”¨ WaitGroup å’Œ channel å¹¶å‘å¤„ç†
	var wg sync.WaitGroup
	results := make([]*SignResponse, len(req.Messages))
	errors := make([]error, len(req.Messages))
	mu := sync.Mutex{}

	// å¹¶å‘æ‰§è¡Œç­¾å
	for i, msgReq := range req.Messages {
		wg.Add(1)
		go func(index int, signReq *SignRequest) {
			defer wg.Done()

			// è®¾ç½®è¶…æ—¶ä¸Šä¸‹æ–‡ï¼ˆæ¯ä¸ªç­¾åæœ€å¤š30ç§’ï¼‰
			signCtx, cancel := context.WithTimeout(ctx, 30*time.Second)
			defer cancel()

			resp, err := s.ThresholdSign(signCtx, signReq)
			mu.Lock()
			if err != nil {
				errors[index] = err
			} else {
				results[index] = resp
			}
			mu.Unlock()
		}(i, msgReq)
	}

	// ç­‰å¾…æ‰€æœ‰ç­¾åå®Œæˆ
	wg.Wait()

	// ç»Ÿè®¡ç»“æœ
	success := 0
	failed := 0
	validSignatures := make([]*SignResponse, 0, len(req.Messages))

	for i := range req.Messages {
		if errors[i] != nil {
			failed++
		} else if results[i] != nil {
			success++
			validSignatures = append(validSignatures, results[i])
		}
	}

	return &BatchSignResponse{
		Signatures: validSignatures,
		Total:      len(req.Messages),
		Success:    success,
		Failed:     failed,
	}, nil
}

// Verify éªŒè¯ç­¾å
func (s *Service) Verify(ctx context.Context, req *VerifyRequest) (*VerifyResponse, error) {
	// 1. è§£æç­¾å
	sigBytes, err := hex.DecodeString(req.Signature)
	if err != nil {
		return nil, errors.Wrap(err, "failed to decode signature hex")
	}

	// æ„å»ºç­¾åå¯¹è±¡
	// æ³¨æ„ï¼šECDSA ç­¾åæ˜¯ DER æ ¼å¼ï¼ˆ70 å­—èŠ‚ï¼‰ï¼ŒSchnorr ç­¾åæ˜¯ R||S æ ¼å¼ï¼ˆ64 å­—èŠ‚ï¼‰
	signature := &protocol.Signature{
		Bytes: sigBytes,
		Hex:   req.Signature,
	}

	switch detectSignatureFormat(sigBytes) {
	case sigFormatEcdsaDer:
		// ECDSA DERï¼ˆGG18/GG20ï¼‰ï¼ŒR/S ç”±éªŒè¯å‡½æ•°è‡ªè¡Œè§£æ
	case sigFormatSchnorr:
		// Schnorrï¼ˆFROSTï¼‰ï¼šR||S
		signature.R = sigBytes[:32]
		signature.S = sigBytes[32:64]
	default:
		return nil, errors.New("invalid signature length")
	}

	// 2. è§£æå…¬é’¥
	pubKeyBytes, err := hex.DecodeString(req.PublicKey)
	if err != nil {
		return nil, errors.Wrap(err, "failed to decode public key hex")
	}

	pubKey := &protocol.PublicKey{
		Bytes: pubKeyBytes,
		Hex:   req.PublicKey,
	}

	// 3. å‡†å¤‡æ¶ˆæ¯
	var message []byte
	if req.MessageHex != "" {
		var err error
		message, err = hex.DecodeString(req.MessageHex)
		if err != nil {
			return nil, errors.Wrap(err, "failed to decode message hex")
		}
	} else {
		message = req.Message
	}

	// 4. éªŒè¯ç­¾å
	// æ ¹æ®ç­¾åæ ¼å¼ + å…¬é’¥ç±»å‹é€‰æ‹©éªŒè¯æ–¹æ³•
	var valid bool
	var verifyErr error
	sigFormat := detectSignatureFormat(sigBytes)

	if sigFormat == sigFormatEcdsaDer {
		// ECDSA DER æ ¼å¼ï¼ˆGG18/GG20ï¼‰
		// é»˜è®¤åè®®å¦‚æœæ˜¯ GG18/GG20ï¼Œåˆ™ç›´æ¥ç”¨åè®®å¼•æ“éªŒè¯ï¼›å¦åˆ™ä¿æŒå®¹é”™å¹¶ç»™å‡ºè­¦å‘Š
		protocolName := strings.ToLower(s.protocolEngine.DefaultProtocol())
		if protocolName == "gg18" || protocolName == "gg20" {
			log.Debug().
				Int("signature_length", len(sigBytes)).
				Str("protocol_engine", protocolName).
				Msg("ECDSA DER signature detected, verifying with protocol engine")
			valid, verifyErr = s.protocolEngine.VerifySignature(ctx, signature, message, pubKey)
			if verifyErr != nil {
				return nil, errors.Wrap(verifyErr, "failed to verify ECDSA DER signature")
			}
			if !valid {
				return nil, errors.New("ECDSA DER signature verification failed")
			}
		} else {
			// protocolEngine ä¸æ˜¯ ECDSA åè®®ï¼ˆä¾‹å¦‚ FROSTï¼‰ï¼Œä¿ç•™åŸæœ‰å®¹é”™è¡Œä¸º
			log.Warn().
				Int("signature_length", len(sigBytes)).
				Str("protocol_engine", s.protocolEngine.DefaultProtocol()).
				Msg("ECDSA DER signature detected. Current protocol engine is not ECDSA (likely FROST); skipping secondary verification because participants already verified.")
			valid = true
			verifyErr = nil
		}
	} else if sigFormat == sigFormatSchnorr {
		// Schnorr æ ¼å¼ï¼ˆFROSTï¼‰ï¼š64 å­—èŠ‚
		// æ ¹æ®å…¬é’¥é•¿åº¦åˆ¤æ–­æ›²çº¿ç±»å‹
		// Ed25519 å…¬é’¥ï¼š32 å­—èŠ‚
		// secp256k1 å…¬é’¥ï¼š33 å­—èŠ‚ï¼ˆå‹ç¼©ï¼‰æˆ– 65 å­—èŠ‚ï¼ˆæœªå‹ç¼©ï¼‰
		if len(pubKeyBytes) == 32 {
			// Ed25519 å…¬é’¥ï¼Œä½¿ç”¨ protocolEngine éªŒè¯ï¼ˆFROST åè®®ï¼‰
			// æ³¨æ„ï¼šåº”è¯¥ä½¿ç”¨ protocolEngine.VerifySignatureï¼Œå› ä¸ºå®ƒçŸ¥é“å¦‚ä½•æ­£ç¡®å¤„ç† FROST ç­¾å
			log.Debug().
				Int("public_key_length", len(pubKeyBytes)).
				Int("signature_length", len(sigBytes)).
				Str("protocol_engine", s.protocolEngine.DefaultProtocol()).
				Msg("Detected Ed25519 public key, using protocol engine verification")

			// ä½¿ç”¨ protocolEngine éªŒè¯ï¼ˆFROST åè®®çŸ¥é“å¦‚ä½•éªŒè¯ EdDSA ç­¾åï¼‰
			valid, verifyErr = s.protocolEngine.VerifySignature(ctx, signature, message, pubKey)
			if verifyErr != nil {
				return nil, errors.Wrap(verifyErr, "failed to verify signature")
			}
			if !valid {
				return nil, errors.New("signature verification failed")
			}
		} else if len(pubKeyBytes) == 33 || len(pubKeyBytes) == 65 {
			// secp256k1 å…¬é’¥ï¼Œä½¿ç”¨ protocolEngine éªŒè¯ï¼ˆå¯èƒ½æ˜¯ FROST æˆ– GG18/GG20ï¼‰
			log.Debug().
				Int("public_key_length", len(pubKeyBytes)).
				Int("signature_length", len(sigBytes)).
				Msg("Detected secp256k1 public key, using protocol engine verification")
			valid, verifyErr = s.protocolEngine.VerifySignature(ctx, signature, message, pubKey)
			if verifyErr != nil {
				return nil, errors.Wrap(verifyErr, "failed to verify signature")
			}
			if !valid {
				return nil, errors.New("signature verification failed")
			}
		} else {
			// æœªçŸ¥å…¬é’¥æ ¼å¼ï¼Œå°è¯•ä½¿ç”¨ protocolEngine éªŒè¯
			log.Warn().
				Int("public_key_length", len(pubKeyBytes)).
				Int("signature_length", len(sigBytes)).
				Msg("Unknown public key format, attempting protocol engine verification")
			valid, verifyErr = s.protocolEngine.VerifySignature(ctx, signature, message, pubKey)
			if verifyErr != nil {
				return nil, errors.Wrap(verifyErr, "failed to verify signature")
			}
			if !valid {
				return nil, errors.New("signature verification failed")
			}
		}
	} else {
		// å…¶ä»–æ ¼å¼ï¼Œä½¿ç”¨ protocolEngine éªŒè¯
		valid, verifyErr = s.protocolEngine.VerifySignature(ctx, signature, message, pubKey)
		if verifyErr != nil {
			return nil, errors.Wrap(verifyErr, "failed to verify signature")
		}
		if !valid {
			return nil, errors.New("signature verification failed")
		}
	}

	// 5. å¦‚æœéªŒè¯æˆåŠŸï¼Œç”Ÿæˆåœ°å€ï¼ˆå¯é€‰ï¼‰
	var address string
	if valid && req.ChainType != "" {
		// è¿™é‡Œå¯ä»¥æ ¹æ®é“¾ç±»å‹ç”Ÿæˆåœ°å€ï¼Œä½†éœ€è¦é“¾é€‚é…å™¨
		// ä¸ºäº†ç®€åŒ–ï¼Œæš‚æ—¶è¿”å›ç©ºåœ°å€
		address = ""
	}

	return &VerifyResponse{
		Valid:      valid,
		PublicKey:  req.PublicKey,
		Address:    address,
		VerifiedAt: time.Now().Format(time.RFC3339),
	}, nil
}

// detectSignatureFormat æŒ‰é•¿åº¦åˆ¤æ–­ç­¾åæ ¼å¼
func detectSignatureFormat(sig []byte) signatureFormat {
	switch len(sig) {
	case 70:
		return sigFormatEcdsaDer
	case 64:
		return sigFormatSchnorr
	default:
		return sigFormatUnknown
	}
}

type signatureFormat int

const (
	sigFormatUnknown signatureFormat = iota
	sigFormatEcdsaDer
	sigFormatSchnorr
)